# skeleton-wasm-rust

./: Cargo.toml  build.rs  build.sh  runlicense.json
src/: lib.rs
