[package]
name = "skeleton-wasm-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
serde_json = "1"

[dependencies]
runlicense-sdk-webassembly-rust = { git = "https://github.com/RunLicense/sdk-webassembly-rust", features = ["wasm"] }
wasm-bindgen-futures = "0.4.64"
wasm-bindgen = "0.2"
